fix popover alignment and remove ts casting

--- a/packages/components/src/Page/Page.css
+++ b/packages/components/src/Page/Page.css
@@ -39,6 +39,7 @@
 
 .titleBar > .actionGroup {
   flex: 1 0 auto;
+  align-self: baseline;
 }
 
 .titleBar.large,
